[package]
name = "generate-smarter-encryption-bloom-filter"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"
license = "GPL-3.0"
description = "Download and generate a bloom filter from the DuckDuckGo smarter encryption HTTPS list, intersected with the Majestic Million"
homepage = "https://github.com/EFForg/generate-smarter-encryption-bloom-filter"
repository = "https://github.com/EFForg/generate-smarter-encryption-bloom-filter"

[dependencies]
bloomfilter = "1.0"
serde_json = "1.0"
ring = "0.16"
hex = "0.4"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1.12", features = ["full"] }
futures-util = { version = "0.3", features = ["io"] }
bytes = "1.0"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
async-tar = "0.4"
tokio-util = { version = "0.6", features = ["io"] }

[dev-dependencies]
mktemp = "0.4"
